--- a/Revenge/Revenge/Revenge.vcxproj
+++ b/Revenge/Revenge/Revenge.vcxproj
@@ -77,7 +77,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Program Files (x86)\Visual Leak Detector\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\Daniel\Downloads\vld-master\vld-master\lib</IncludePath>
     <LibraryPath>C:\Program Files (x86)\Visual Leak Detector\lib\Win64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -174,6 +174,7 @@
     <ClCompile Include="MenuBox.cpp" />
     <ClCompile Include="MenuManager.cpp" />
     <ClCompile Include="OverworldManager.cpp" />
+    <ClCompile Include="PlayerCharacters.cpp" />
     <ClCompile Include="Renderer.h" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Manager.cpp" />
@@ -183,6 +184,7 @@
     <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="SpriteBatch.cpp" />
+    <ClCompile Include="TestMaps.cpp" />
     <ClCompile Include="Text.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TextureManager.cpp" />
@@ -212,12 +214,14 @@
     <ClInclude Include="MenuManager.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="OverworldManager.h" />
+    <ClInclude Include="PlayerCharacters.h" />
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="SaveManager.h" />
     <ClInclude Include="SoundManager.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="SpriteBatch.h" />
+    <ClInclude Include="TestMaps.h" />
     <ClInclude Include="Text.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureManager.h" />
