--- a/Revenge/Revenge/Revenge.vcxproj
+++ b/Revenge/Revenge/Revenge.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="MenuBox.cpp" />
     <ClCompile Include="MenuManager.cpp" />
     <ClCompile Include="OverworldManager.cpp" />
+    <ClCompile Include="PauseMenu.cpp" />
     <ClCompile Include="PlayerCharacters.cpp" />
     <ClCompile Include="Renderer.h" />
     <ClCompile Include="main.cpp" />
@@ -214,6 +215,7 @@
     <ClInclude Include="MenuManager.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="OverworldManager.h" />
+    <ClInclude Include="PauseMenu.h" />
     <ClInclude Include="PlayerCharacters.h" />
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="Room.h" />
