Finished up component system Moved interaction (dialogue) and triggers (doors) to components. This made Door and Interactable classes redundant (though, should they still exist and set up their own components on construct? Will answer further down the line. Wanted the system to work without dedicated classes first) Updated to cpp20 (wanted std::clamp which is only in v17)
Small bug - currently, trigger components act as colliders. I want to move the collision system away from detecting sprite rectangles and onto its own component, so this is not worth fixing right now.

Removed Rectangle.h include from object header & included it on relevant files
Fixed NPC collision not registering & stopping movement when only hitting horizontally
Switched room transition calls from going through Manager -> OverworldManager to directly calling OverworldManager which then asks Manager if it can do the transition
Moved some object functionality into a new .cpp file

--- a/Revenge/Revenge/Revenge.vcxproj
+++ b/Revenge/Revenge/Revenge.vcxproj
@@ -111,6 +111,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Create</PrecompiledHeader>
       <PrecompiledHeaderFile>defines.h</PrecompiledHeaderFile>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>DebugFull</GenerateDebugInformation>
@@ -173,6 +174,7 @@
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="MenuBox.cpp" />
     <ClCompile Include="MenuManager.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="OverworldManager.cpp" />
     <ClCompile Include="PauseMenu.cpp" />
     <ClCompile Include="PlayerCharacters.cpp" />
@@ -191,6 +193,7 @@
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="TitleManager.cpp" />
+    <ClCompile Include="TriggerComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ability.h" />
@@ -229,6 +232,7 @@
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="TitleManager.h" />
+    <ClInclude Include="TriggerComponent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
