--- a/Revenge/Revenge/Revenge.vcxproj
+++ b/Revenge/Revenge/Revenge.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Ability.cpp" />
     <ClCompile Include="BorderedBox.cpp" />
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="CollisionComponent.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="ComponentManager.cpp" />
     <ClCompile Include="DialogueBox.cpp" />
@@ -200,6 +201,7 @@
     <ClInclude Include="AudioPlayer.h" />
     <ClInclude Include="BorderedBox.h" />
     <ClInclude Include="Character.h" />
+    <ClInclude Include="CollisionComponent.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="ComponentManager.h" />
     <ClInclude Include="defines.h" />
