--- a/Revenge/Revenge/Revenge.vcxproj
+++ b/Revenge/Revenge/Revenge.vcxproj
@@ -156,8 +156,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Ability.cpp" />
+    <ClCompile Include="AnimationComponent.cpp" />
     <ClCompile Include="BorderedBox.cpp" />
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="CharacterManager.cpp" />
     <ClCompile Include="CollisionComponent.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="ComponentManager.cpp" />
@@ -174,11 +176,11 @@
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="MenuBox.cpp" />
     <ClCompile Include="MenuManager.cpp" />
+    <ClCompile Include="MovementComponent.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="OverworldManager.cpp" />
     <ClCompile Include="PauseMenu.cpp" />
     <ClCompile Include="PhysicsManager.cpp" />
-    <ClCompile Include="PlayerCharacters.cpp" />
     <ClCompile Include="Renderer.h" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Manager.cpp" />
@@ -195,12 +197,15 @@
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="TitleManager.cpp" />
     <ClCompile Include="TriggerComponent.cpp" />
+    <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ability.h" />
+    <ClInclude Include="AnimationComponent.h" />
     <ClInclude Include="AudioPlayer.h" />
     <ClInclude Include="BorderedBox.h" />
     <ClInclude Include="Character.h" />
+    <ClInclude Include="CharacterManager.h" />
     <ClInclude Include="CollisionComponent.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="ComponentManager.h" />
@@ -217,11 +222,11 @@
     <ClInclude Include="Math.h" />
     <ClInclude Include="MenuBox.h" />
     <ClInclude Include="MenuManager.h" />
+    <ClInclude Include="MovementComponent.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="OverworldManager.h" />
     <ClInclude Include="PauseMenu.h" />
     <ClInclude Include="PhysicsManager.h" />
-    <ClInclude Include="PlayerCharacters.h" />
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="SaveManager.h" />
@@ -235,6 +240,7 @@
     <ClInclude Include="Tile.h" />
     <ClInclude Include="TitleManager.h" />
     <ClInclude Include="TriggerComponent.h" />
+    <ClInclude Include="Weapon.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
